k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: "2401036"
spec:
  selector:
    app: dashboard
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30246
